# CinemaManagement

./: CMakeLists.txt  README.md
data/: customers.txt  movies.txt  rooms.txt  showtimes.txt  tickets.txt
include/: CinemaSystem.hpp  Customer.hpp  DiscountPolicy.hpp  Movie.hpp  Room.hpp  Seat.hpp  Showtime.hpp  Ticket.hpp  TicketPricingStrategy.hpp
src/: CinemaSystem.cpp  Customer.cpp  DiscountPolicy.cpp  Movie.cpp  Room.cpp  Seat.cpp  Showtime.cpp  Ticket.cpp  main.cpp
tests/: test_core.cpp
